# example

./: .gitignore  README.md  pyproject.toml  setup.py  tutorial.ipynb
example/inference/: prior.py
example/tests/: test_inference.py
