[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example"
version = "1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "An example package for Harvard PHYS201"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3",
    "Operating System :: OS Independent",
]
dependencies = [
	"numpy >= 1.24.1"
]

[project.urls]
"Homepage" = "http://github.com/phys201/example"
